--- a/src/app/levelassignedgroups/levelassignedgroups.page.html
+++ b/src/app/levelassignedgroups/levelassignedgroups.page.html
@@ -63,9 +63,8 @@
         
 
         <dxo-editing
-            [allowAdding]="true"
-            [allowUpdating]="false"
-            [allowDeleting]="true"
+            [allowAdding]="ShowHierarchyAccess"
+            [allowDeleting]="ShowHierarchyAccess"
             [useIcons]="true"
             >
         </dxo-editing>
