--- a/src/app/levelassigneduser/levelassigneduser.page.html
+++ b/src/app/levelassigneduser/levelassigneduser.page.html
@@ -49,8 +49,8 @@
 
         <dxo-editing
               mode="row"
-              [allowAdding]="true"
-              [allowDeleting]="true"
+              [allowAdding]="ShowHierarchyAccess"
+              [allowDeleting]="ShowHierarchyAccess"
               [useIcons]="true">
           </dxo-editing>
         </dx-data-grid>
