--- a/src/app/levelview/levelview.page.html
+++ b/src/app/levelview/levelview.page.html
@@ -56,14 +56,14 @@
 
       </dxi-column>
 
-      <dxo-editing
+      <!-- <dxo-editing
               mode="row"
               [useIcons]="true"
               [allowDeleting]="true"
               [allowAdding]="true"
               class="my-modal-class"
             >
-            </dxo-editing>
+            </dxo-editing> -->
       </dx-data-grid>
 
 </ion-content>
