--- a/src/app/levelviewusers/levelviewusers.page.html
+++ b/src/app/levelviewusers/levelviewusers.page.html
@@ -21,7 +21,7 @@
       [rowAlternationEnabled]="true"
       [allowColumnResizing]="true"
       (onRowInserted)="onRowInserting($event)"
-      (onRowRemoving)="onRowDeleted($event)"    >
+      (onRowRemoving)="onRowDeleted($event)" >
   
     <dxi-column dataField="Access" caption="Access Level" editCellTemplate="accesuserselect">
       <div *dxTemplate="let cellInfo of 'accesuserselect'">
@@ -40,21 +40,20 @@
                   [searchEnabled]="true"
                   [multiline]="true"
                   (onValueChanged)="onValueChanged($event)"
-                 
                   >
       </dx-tag-box>
   </div>
 
   </dxi-column>
 
-      <dxo-editing
+      <!-- <dxo-editing
               mode="row"
               [useIcons]="true"
               [allowAdding]="true"
               [allowDeleting]="true"
               class="my-modal-class"
             >
-            </dxo-editing>
+            </dxo-editing> -->
     </dx-data-grid>
 
 </ion-content>
